examples/gateway-api/manifests/standard/simple-gateway/httproute.yaml
#$ Used in:
#$ - site-src/guides/simple-gateway.md
#$ - site-src/blog/2021/introducing-v1beta1.md
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
spec:
  parentRefs:
  - name: prod-web
  rules:
  - backendRefs:
    - name: foo-svc
      port: 8080
---
# Following are resources not explicitely declared
apiVersion: v1
kind: Service
metadata:
  name: foo-svc
